fix(participants): adjust spacing of the list page

--- a/src/app/participants/participant/participant.component.scss
+++ b/src/app/participants/participant/participant.component.scss
@@ -8,6 +8,7 @@
 
 header {
   margin-top: 0.5rem;
+  height: 2rem;
 
   h1 {
     color: black;
